2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-02-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* autoproxy.tcl: Dealt with the parsing requirements as mentioned
	* autoproxy.man: in bug #1099162. In theory we may have different
	* pkgIndex.tcl:  proxy settings for https and http (and other
	protocols) but to deal with these we will need to change the http
	package so we do not deal with them now.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-07-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* autoproxy.tcl: Removed the stuff for Digest and NTLM until it
	is working properly. Added an authProc configuration option to
	permit application code to specify a procedure to get
	authentication information from the user.
	
2004-07-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* autoproxy.tcl: Fix the version number.

2004-07-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* autoproxy.tcl: Import of the wiki version.
	* autoproxy.man: Wrote a manual page.